Addded a tutorial of how to make a lasanga

--- a/recipes/lasanga.html
+++ b/recipes/lasanga.html
@@ -3,9 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=10, initial-scale=1.0">
-    <title>Document</title>
+    <title>How to Make Lasanga</title>
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/download.jpeg" alt="Good Ol' Lasagna" height="400" width="300">
+    <h2>Description</h2>
+    <p>Another of my favorites, I first made this for Cruz when she was hungry. It was quickly devoures and has become an often requested meal.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1lb. Italian Sausage</li>
+        <li>1 Yellow Onion</li>
+        <li>1 28oz. can crushed tomatoes</li>
+        <li>3 oz. tomato paste</li>
+        <li>1 Tbsp Italian Seasoning</li>
+        <li>2 cups whole milk ricotta</li>
+        <li>1 cup shredded Italian cheese blend</li>
+        <li>1 large egg</li>
+        <li>9 lasagna noodles</li>
+        <li>2 cups shredded mozzarella</li>
+        <li>1 tbsp chopped fresh parsley</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ul>
+        <h4>Step 1</h4>
+        <li>Add the Italian sausage to a deep skillet
+            and cook over medium heat until browned. 
+            While the sausage is cooking, dice the onion 
+            and then add it to the skillet with the sausage. 
+            Continue to stir and cook until the onion has softened.
+        </li>
+
+        <h4>Step 2</h4>
+        <li>Add the crushed tomatoes, tomato paste, 
+            and Italian seasoning to the skillet and stir to combine.
+            Partially cover the skillet with a lid, turn the heat down to medium-low, 
+            and let the sauce simmer while you prepare the other 
+            ingredients. Stir the saue occasionally as it cooks.
+        </li>
+
+        <h4>Step 3</h4>
+        <li>Preheat the oven to 350ºF. Add the ricotta cheese,
+            Italian cheese blend, egg, and pepper to a bowl,
+            then stir to combine. Set the cheese mixture aside.
+        </li>
+
+        <h4>Step 4</h4>
+        <li>Fill a large pot with water and add 1/2 tbsp salt.
+            Bring the pot of water to a boil. Once boiling, add
+            the lasanga noodles and cook just until tender. Drain
+            the noodles in a colander.
+        </li>
+
+        <h4>Step 5</h4>
+        <li>Spread about 1 cup of sauce over the bottom of 
+            a 9x13-inch casserole dish. Lay three lasanga noodles
+            on top of the sauce. Spread 1/3 of the cheese mixture
+            evenly over the noodles. Repeat the layers two more times.
+            Finish with the remaining sauce, then top with thh shredded mozzarella.
+        </li>
+
+        <h4>Step 6</h4>
+        <li>Cover the lasanga with foil and bake for 40 minutes.
+            After 40 minutes, remove the foil, turn the oven from
+            bake to broil, and broil for about 5 minutes or just
+            until the cheese gets a little brown on top.
+            Watch the lasanga closely as it broils!
+        </li>
+
+        <h4>Step 7</h4>
+        <li>Top the lasagna with chopped parsley if desired.
+            Slice the lasanga into nine pieces and serve!
+        </li>
+    </ul>
 </body>
 </html>
